<resources>
    <string name="app_name">eChirinos v2</string>
    <string name="title_activity_dptos">Departamentos</string>
    <string name="title_activity_incs">Incidencias</string>

    <!--Navigation Drawer-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eChirinos v2</string>
    <string name="nav_header_subtitle">MySQL</string>
    <string name="iv_nav_header_contentDescription">Imagen Logo</string>

    <!--Menus-->

    <string name="menu_Login">Login</string>
    <string name="menu_Dptos">Departamentos</string>
    <string name="menu_Incs">Incidencias</string>
    <string name="menu_Preferencias">Preferencias</string>
    <string name="menu_Salir">Salir</string>
    <string name="menu_Filtro">Filtro</string>

    <!--Mensajes-->

    <string name="msg_DlgConfirmacion_Salir">¿Desea cerrar la App?</string>
    <string name="msg_DlgConfirmacion_Eliminar">Se va a eliminar el elemento seleccionado. ¿Está seguro?</string>

    <string name="msg_LoginOK">Login correcto.</string>
    <string name="msg_LoginKO">Login incorrecto!!</string>
    <string name="msg_NoLogin">No Login!!</string>
    <string name="msg_LoginPermisos">No tienes permisos!!</string>
    <string name="msg_CambioBD">Debe reiniciar la App!!</string>

    <string name="msg_FaltanDatosObligatorios">Faltan datos obligatorios!!</string>
    <string name="msg_AltaDepartamentoOK">Alta de departamento correcta.</string>
    <string name="msg_AltaDepartamentoKO">Alta de departamento incorrecta!!</string>
    <string name="msg_EditarDepartamentoOK">Edición de departamento correcta.</string>
    <string name="msg_EditarDepartamentoKO">Edición de departamento incorrecta!!</string>
    <string name="msg_BajaDepartamentoOK">Baja de departamento correcta.</string>
    <string name="msg_BajaDepartamentoKO">Baja de departamento incorrecta!!</string>
    <string name="msg_AltaIncidenciaOK">Alta de incidencia correcta.</string>
    <string name="msg_AltaIncidenciaKO">Alta de incidencia incorrecta!!</string>
    <string name="msg_EditarIncidenciaOK">Edición de incidencia correcta.</string>
    <string name="msg_EditarIncidenciaKO">Edición de incidencia incorrecta!!</string>
    <string name="msg_BajaIncidenciaOK">Baja de incidencia correcta.</string>
    <string name="msg_BajaIncidenciaKO">Baja de incidencia incorrecta!!</string>

    <string name="msg_DatosRecuperadosOK">Datos recuperados correctamente.</string>
    <string name="msg_DatosGuardadosOK">Datos guardados correctamente.</string>
    <string name="msg_ErrorBaseDatos">Error en base de datos!!</string>
    <string name="msg_AbrirConexionOK">Conexión BD abierta correctamente.</string>
    <string name="msg_CerrarConexionOK">Conexión BD cerrada correctamente.</string>
    <string name="msg_ErrorAbrirConexion">Error abriendo conexión BD!!</string>
    <string name="msg_ErrorCerrarConexion">Error cerrando conexión BD!!</string>

    <string name="msg_Dpto_Id">ID: %1$02d</string>
    <string name="msg_Dpto_Nombre">\tNombre: %1$s</string>

    <string name="msg_Inc_DptoIdFecha">DPTO: %1$02d ID: %2$10s FECHA: %3$10s</string>
    <string name="msg_Inc_TipoEstado">TIPO: %1$3s ESTADO: %2$10s</string>
    <string name="msg_Inc_Descripcion">Descripción: %1$s</string>

    <!--Widgets-->

    <string name="tv_Login_Cabecera">LOGIN</string>
    <string name="tv_Login">No Login</string>
    <string name="tv_Login_Dptos">Dptos:</string>
    <string name="tv_Login_Clave">Clave:</string>

    <string name="tv_Dpto_Cabecera_Editar">EDITAR DEPARTAMENTO</string>
    <string name="tv_Dpto_Cabecera_Crear">CREAR DEPARTAMENTO</string>

    <string name="bt_Dpto_Eliminar">Eliminar</string>
    <string name="bt_Dpto_Editar">Editar</string>
    <string name="bt_Dpto_Crear">Crear</string>

    <string name="tv_Dpto_Id">Id:</string>
    <string name="tv_Dpto_Nombre">Nombre:</string>
    <string name="tv_Dpto_Clave">Clave:</string>
    <string name="iv_Dpto_contentDescription">Imagen Dpto</string>

    <string name="tv_Inc_Cabecera_Editar">EDITAR INCIDENCIA</string>
    <string name="tv_Inc_Cabecera_Crear">CREAR INCIDENCIA</string>

    <string name="bt_Inc_Eliminar">Eliminar</string>
    <string name="bt_Inc_Editar">Editar</string>
    <string name="bt_Inc_Crear">Crear</string>

    <string name="tv_Inc_Dpto">Dpto:</string>
    <string name="tv_Inc_Id">Id:</string>
    <string name="tv_Inc_Fecha">Fecha:</string>
    <string name="tv_Inc_Descripcion">Descripción:</string>
    <string name="tv_Inc_Tipo">Tipo:</string>
    <string name="rb_Inc_TipoRMI">RMI</string>
    <string name="rb_Inc_TipoRMA">RMA</string>
    <string name="tv_Inc_Estado">Estado:</string>
    <string name="tv_Inc_Resolucion">Resolución:</string>
    <string name="iv_Inc_contentDescription">Imagen Inc</string>

    <string name="tv_Filtro_Cabecera">FILTRO</string>
    <string name="tv_Filtro_Dptos">Dptos:</string>
    <string name="tv_Filtro_Estado">Estado:</string>
    <string name="rb_Filtro_Estado_Todas">Todas</string>
    <string name="rb_Filtro_Estado_Resueltas">Resueltas</string>
    <string name="rb_Filtro_Estado_NoResueltas">No Resueltas</string>
    <string name="tv_Filtro_Fecha">Fecha:</string>
    <string name="bt_Filtro_Fecha">&#8230;</string>

    <!--Widgets genéricos-->

    <string name="bt_OK">OK</string>
    <string name="bt_KO">KO</string>
    <string name="bt_SI">Si</string>
    <string name="bt_NO">No</string>
    <string name="bt_Aceptar">Aceptar</string>
    <string name="bt_Cancelar">Cancelar</string>
    <string name="bt_Salir">Salir</string>

    <!--Preferencias-->

    <string name="category_Almacenamiento">Almacenamiento</string>
    <string name="category_Interfaz">Interfaz</string>

    <string name="MySQL_url_key">MySQL_url</string>
    <string name="MySQL_url_title">MySQL URL</string>
    <string name="MySQL_url_summary">URL de conexión a MySQL</string>
    <string name="MySQL_url_default">remotemysql.com</string>
    <string name="MySQL_name_key">MySQL_name</string>
    <string name="MySQL_name_title">MySQL Nombre</string>
    <string name="MySQL_name_summary">Nombre de la base de datos MySQL</string>
    <string name="MySQL_name_default">NH0wtZDe2c</string>
    <string name="MySQL_user_key">MySQL_user</string>
    <string name="MySQL_user_title">MySQL User</string>
    <string name="MySQL_user_summary">Usuario de conexión a MySQL</string>
    <string name="MySQL_user_default">NH0wtZDe2c</string>
    <string name="MySQL_password_key">MySQL_password</string>
    <string name="MySQL_password_title">MySQL Password</string>
    <string name="MySQL_password_summary">Contraseña de conexión a MySQL</string>
    <string name="MySQL_password_default">4cTesqlYKb</string>
    <string name="MySQL_timeout_key">MySQL_timeout</string>
    <string name="MySQL_timeout_title">MySQL Timeout</string>
    <string name="MySQL_timeout_summary">Tiempo de espera a conexión MySQL</string>
    <string name="MySQL_timeout_default">10</string>

    <string name="login_key">login</string>
    <string name="login_title">Mostrar Login</string>
    <string name="login_summary">Muestra el Login al inicio</string>
    <string name="login_default">true</string>

    <string name="splashApp_key">splashApp</string>
    <string name="splashApp_title">Duración Splash (3sg)</string>
    <string name="splashApp_summary">Establece a 3 sg la duración del Splash</string>
    <string name="splashApp_default">false</string>

    <string name="bNav_key">BottomNav</string>
    <string name="bNav_title">Mostrar BottomNav</string>
    <string name="bNav_summary">Muestra un Bottom Navigation con opciones</string>
    <string name="bNav_default">false</string>
    <string name="noFound">No se encontraron incidencias</string>

</resources>
